# ContextOS

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  mcp.json  mcp.json.example  pyproject.toml  setup.cfg
.continue/: config.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.kiro/hooks/: contextos-prefetch.json
benchmarks/: README.md  combined.json  hybrid-results.json  vector-results.json
contextos/: __init__.py  api.py  auth.py  cache_layer.py  chunker.py  cli.py  compressor.py  config.py  dashboard.py  embedder.py  evaluator.py  graph.py  logger.py  mcp_server.py  memory.py  plugins.py  proxy.py  retrieval.py  scaffolder.py  schema.py  session.py  store.py  symbols.py  ui.py  user_memory.py  vault.py  watcher.py
contextos/connectors/: __init__.py  base.py  github.py  json_source.py  openapi.py
contextos/ingestors/: __init__.py  csv_excel.py  docx.py  pdf.py  pptx.py
contextos/static/: dashboard.html
contextos/templates/api-first/architecture/: api.md
contextos/templates/default/architecture/: overview.md
contextos/templates/default/context/: current.md
contextos/templates/default/decisions/: ADR-001-example.md
contextos/templates/default/domain/: entity.md
contextos/templates/default/product/: vision.md
contextos/templates/default/workflows/: example-flow.md
contextos/templates/microservice/architecture/: service.md
docs/: AICF-SPEC.md
docs/vault/architecture/: overview.md  retrieval.md
docs/vault/context/: current.md  session-2026-06-03-f4137726.md
docs/vault/decisions/: ADR-001-lancedb.md  ADR-002-bge-small.md  ADR-003-local-only.md  ADR-004-hybrid-search.md  ADR-005-document-ingestors.md
docs/vault/workflows/: indexing-flow.md
eval/: contextos-questions.json  questions.json.example
examples/my-project/architecture/: backend.md
examples/my-project/context/: current-sprint.md
examples/my-project/decisions/: ADR-001-use-postgres.md  ADR-002-event-sourcing.md
examples/my-project/domain/: booking.md  payment.md
examples/my-project/product/: vision.md
examples/my-project/workflows/: booking-flow.md
tests/: test_e2e.py  test_smoke.py  test_v11.py  test_v12.py  test_v13.py  test_v14.py  test_v14_fixes.py  test_v20.py
