[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextos"
version = "1.0.0rc1"
description = "Local-first knowledge OS for AI coding agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "knowledge", "rag", "local", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-frontmatter>=1.1",
    "mistune>=3.0",
    "sentence-transformers>=3.0",
    "lancedb>=0.6",
    "networkx>=3.3",
    "langchain-text-splitters>=0.2",
    "PyYAML>=6.0",
    "rich>=13.7",
    "pyarrow>=17.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/AbhayankarBellur/ContextOS"
Repository = "https://github.com/AbhayankarBellur/ContextOS.git"
Issues = "https://github.com/AbhayankarBellur/ContextOS/issues"

[project.scripts]
context = "contextos.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextos*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
