[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextos-vault"
version = "1.5.0"
description = "Local-first knowledge OS for AI coding agents — hybrid search, MCP server, multi-format vault (pip install contextos-vault)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "ContextOS Contributors", email = "abhayankarbellur@gmail.com" }
]
maintainers = [
    { name = "AbhayankarBellur", email = "abhayankarbellur@gmail.com" }
]
keywords = [
    "ai", "agents", "knowledge", "rag", "local", "cli",
    "developer-tools", "llm", "context", "mcp", "embeddings",
    "vector-search", "bm25", "hybrid-search", "coding-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Database :: Database Engines/Servers",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-frontmatter>=1.1",
    "mistune>=3.0",
    "sentence-transformers>=3.0",
    "lancedb>=0.6",
    "networkx>=3.3",
    "langchain-text-splitters>=0.2",
    "PyYAML>=6.0",
    "rich>=13.7",
    "pyarrow>=17.0",
    "pandas>=2.0",
    "mcp>=1.0",
    "sumy>=0.11",
    "watchfiles>=0.20",
    "textual>=0.89",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage     = "https://github.com/AbhayankarBellur/ContextOS"
Repository   = "https://github.com/AbhayankarBellur/ContextOS.git"
Issues       = "https://github.com/AbhayankarBellur/ContextOS/issues"
Changelog    = "https://github.com/AbhayankarBellur/ContextOS/releases"
Documentation = "https://github.com/AbhayankarBellur/ContextOS#readme"

[project.scripts]
context = "contextos.cli:app"

[tool.setuptools.package-data]
contextos = [
    "templates/**/*.md",
    "templates/**/*.yaml",
    "templates/**/*.json",
    "py.typed",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contextos*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
